--- a/app.css
+++ b/app.css
@@ -2,4 +2,35 @@ body, h1, h2, button, div {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
+  font-size: 2vw;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+  font-size: 4em;
+}
+
+#num {
+  text-align: center;
+  font-size: 4em;
+}
+
+#btns {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  margin: 0 1em;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
 }
