--- a/app.css
+++ b/app.css
@@ -11,29 +11,39 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  background-color: #f1f5f8;
 }
 
 h1 {
   text-align: center;
   font-size: 4em;
+  color: #102b42;
+  letter-spacing: 0.1em;
 }
 
 #num {
   text-align: center;
-  font-size: 4em;
+  font-size: 8em;
   transition: 0.25s;
+  font-weight: 400;
 }
 
 #btns {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 button {
-  margin: 0 1em;
-  font-size: 2em;
+  font-size: 1.5em;
   text-transform: uppercase;
   letter-spacing: 0.25em;
+  border: 2px solid black;
+  border-radius: 0.75em;
+  padding: 0.5em;
+  padding-left: 0.65em;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+  background-color: #f1f5f8;
 }
 
 .pos {
